# metrics_refbox

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: activities_list.txt  activity_recognition.json  assess_activity_state.json  cluttered_pick.json  generic_task.json  gesture_recognition.json  gestures_list.txt  handover_object.json  human_recognition.json  item_delivery.json  locations_list.txt  object_detection.json  objects_list.txt  person_detection.json  receive_object.json  refbox.json
config/trials/: placeholder.txt
docker/: Dockerfile  start.sh
launch/: metrics_refbox.launch
results/: placeholder.txt
scripts/: metrics_refbox_node
src/metrics_refbox/: activity_recognition.py  assess_activity_state.py  benchmark_config.py  cluttered_pick.py  generic_task.py  gesture_recognition.py  handover_object.py  human_recognition.py  item_delivery.py  metrics_refbox.py  metrics_refbox_gui.py  object_detection.py  person_detection.py  receive_object.py
