<?xml version="1.0"?>
<package format="3">
  <name>metrics_refbox</name>
  <version>0.1.0</version>
  <description>
      UI to send commands to robots to perform FBMs and TBMs
  </description>

  <author email="santosh.thoduka@gmail.com">Santosh Thoduka</author>
  <maintainer email="santosh.thoduka@gmail.com">Santosh Thoduka</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>roslint</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy_message_converter</exec_depend>
  <exec_depend>metrics_refbox_msgs</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>cv_bridge</exec_depend>


  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <test_depend>roslaunch</test_depend>
</package>
